@@ -209,8 +209,7 @@ cstack_str(PyObject *o)
 }
 
 PyTypeObject PyCStack_Type = {
-    PyObject_HEAD_INIT(&PyType_Type)
-    0,
+    PyVarObject_HEAD_INIT(&PyType_Type, 0)
     "_stackless.cstack",
     sizeof(PyCStackObject),
     sizeof(PyObject *),
@@ -1030,8 +1029,7 @@ static void unwind_dealloc(PyObject *op) {
 }
 
 static PyTypeObject PyUnwindToken_Type = {
-    PyObject_HEAD_INIT(&PyUnwindToken_Type)
-    0,
+    PyVarObject_HEAD_INIT(&PyUnwindToken_Type, 0)
     "UnwindToken",
     0,
     0,
